<resources>
    <string name="app_name">HEBA</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section!!!!!!!!!!!!!!!!!!!!!: %1$d</string>
    <string name="title_activity_select_event">SelectEvent</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- String related to Sign up, Log in, Log out -->
    <string name="signup">회원가입</string>
    <string name="prompt_username">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_password_again">비밀번호 확인</string>
    <string name="error_intro">""</string>
    <string name="error_blank_username">아이디를 입력해주</string>
    <string name="error_blank_password">비밀번호를 입력해주</string>
    <string name="error_mismatched_passwords">비밀번호를 확인해주</string>
    <string name="error_join">"주시고, "</string>
    <string name="error_end">"세요."</string>
    <string name="progress_signup">회원정보 등록중&#8230;</string>

    <string name="login">로그인</string>
    <string name="progress_login">로그인중&#8230;</string>

    <string name="logout">로그아웃</string>
    <string name="progress_logout">로그아웃중&#8230;</string>
    <string name="progress_edit_password">비밀번호 변경중</string>

    <!-- String for Navigation View -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- String related to profile -->
    <string name="number_of_stamp">총 스탬프 개수:  </string>
    <!-- String related to Playground -->
    <string name="pg_progress">이벤트를 불러오는 중</string>
    <string name="pg_end_progress">더 이상 불러올 이벤트가 없습니다</string>
    <!-- String related to Friends ActionContract -->
    <string name="friends_add">친구추가</string>
    <string name="friends_request_accept">확인</string>
    <string name="friends_request_reject">무시</string>
    <string name="friends_subtitle_request">친구 요청</string>
    <string name="friends_subtitle_suggest">알 수도 있는 사람</string>
    <string name="friends_progress">친구 목록을 불러오는 중</string>
    <string name="friends_end_progress">더 이상 불러올 친구가 없습니다</string>
    <string name="friends_done_accept">친구로 추가하였습니다</string>
    <string name="friends_done_reject">친구 추가를 거절하였습니다</string>
    <string name="friends_done_added">친구 요청 전송됨</string>
    <!-- String related to My Stamp -->
    <string name="ms_progress">내 스탬프를 불러오는 중</string>
    <string name="ms_end_progress">더 이상 불러올 내 스탬프가 없습니다</string>
    <!-- String related to Wishlist -->
    <string name="wl_progress">위시리스트를 불러오는 중</string>
    <string name="wl_end_progress">더 이상 불러올 위시리스트가 없습니다</string>
    <!-- String related to Select Event ActionContract -->
    <string name="select_title">참여할 이벤트</string>
    <string name="select_add">새로운 이벤트 추가</string>
    <!-- String related to Create Event ActionContract -->
    <string name="create_commit">확인</string>
    <string name="create_title_hint">제목을 입력해주세요.</string>
    <string name="create_comment_hint">글쓰기...</string>
    <!-- String related to Dialog -->
    <string name="dialog_current_password">현재 비밀번호</string>
    <string name="dialog_new_password">새 비밀번호</string>
    <string name="dialog_new_password_again">새 비밀번호 확인</string>
    <!-- String related to Search ActionContract -->
    <string name="search_hint_text">이벤트 또는 친구 검색</string>
    <string name="search_subtitle_friend">친구 검색 결과</string>
    <string name="search_subtitle_event">이벤트 검색 결과</string>
    <!-- String related to Event Info ActionContract -->
    <string name="title_activity_event_info">EventInfoActivity</string>
    <string name="event_info_stamp_count">명이 참여했습니다</string>
    <string name="event_info_time">에 처음 등록 되었습니다</string>
    <string name="event_info_subtitle">최근 추가된 스탬프</string>
    <string name="event_info_see_more">더보기</string>
    <string name="event_info_add_wishlist">위시리스트 추가</string>
    <string name="title_activity_event_info_stamp_view">EventInfoStampViewActivity</string>
    <!-- String related to Event Info Stamp View ActionContract -->
    <string name="event_info_stamp_view_progress">스탬프를 불러오는 중</string>
    <string name="event_info_stamp_view_end_progress">더 이상 불러올 스탬프가 없습니다</string>
    <string name="title_activity_my_friend">MyFriendActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <!-- STring related to User Info Activity -->
    <string name="user_info_progress">스탬프를 불러오는 중</string>
    <string name="user_info_end_progress">더 이상 불러올 스탬프가 없습니다</string>
    <string name="user_info_add_friend">친구추가</string>
    <string name="user_info_apply_friend">친구수락</string>
    <string name="user_info_reject_friend">거절</string>
</resources>
