<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_edit_password_root"
    android:paddingLeft="@dimen/dialog_editpw_text_margin_side"
    android:paddingRight="@dimen/dialog_editpw_text_margin_side">
    <EditText
        android:id="@+id/dialog_current_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_editpw_text_height"
        android:hint="@string/dialog_current_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorHintText"
        android:layout_marginTop="@dimen/dialog_editpw_text_margin_in"
        android:layout_marginBottom="@dimen/dialog_editpw_text_margin_in"
        android:background="@null"/>
    <EditText
        android:id="@+id/dialog_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_editpw_text_height"
        android:hint="@string/dialog_new_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorHintText"
        android:background="@null"/>
    <EditText
        android:id="@+id/dialog_new_password_again"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_editpw_text_height"
        android:hint="@string/dialog_new_password_again"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorHintText"
        android:background="@null"/>
</LinearLayout>