<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"></FrameLayout>
    <FrameLayout
        android:id="@+id/friends_done_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDone"
        android:visibility="invisible"></FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <com.parse.ParseImageView
            android:id="@+id/friends_profile_image"
            android:layout_width="@dimen/friends_image_width"
            android:layout_height="@dimen/friends_image_width"
            android:layout_margin="@dimen/friends_card_margin"
            android:src="@mipmap/ic_user" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/friends_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/friends_name_text_size"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_stamp"/>
                <TextView
                    android:id="@+id/friends_stamp_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/friends_done_init"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/friends_request_accept_button"
                        android:layout_width="@dimen/friends_request_button_width"
                        android:layout_height="@dimen/friends_request_button_height"
                        android:layout_marginRight="@dimen/friends_request_button_margin"
                        android:text="@string/friends_request_accept"
                        android:textStyle="bold"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/colorWhite"/>
                    <Button
                        android:id="@+id/friends_request_reject_button"
                        android:layout_width="@dimen/friends_request_button_width"
                        android:layout_height="@dimen/friends_request_button_height"
                        android:text="@string/friends_request_reject"
                        android:textStyle="bold"
                        android:backgroundTint="@color/colorWhite"
                        android:textColor="@color/colorPrimary"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/friends_done_accept"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/friends_done_accept"
                    android:visibility="invisible"/>
                <TextView
                    android:id="@+id/friends_done_reject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/friends_done_reject"
                    android:visibility="invisible"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>