<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    tools:context=".EventInfoActivity"
    tools:showIn="@layout/activity_event_info">
    <LinearLayout
        android:id="@+id/event_info_map_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <fragment
            android:id="@+id/event_info_map"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment"
            xmlns:android="http://schemas.android.com/apk/res/android">
        </fragment>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/event_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/event_info_margin_side"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="@dimen/event_info_title_text_size"
                android:elevation="2dp"
                android:background="@color/colorEditTitle"
                android:textColor="@color/colorBlack"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/colorEditTitle"
                android:paddingTop="@dimen/event_info_margin_out"
                android:paddingBottom="@dimen/event_info_margin_in">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_black_24dp"
                    android:paddingLeft="@dimen/event_info_margin_side"
                    android:paddingRight="@dimen/event_info_margin_side" />
                <TextView
                    android:id="@+id/event_info_stamp_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_info_stamp_count"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/colorEditTitle"
                android:paddingTop="@dimen/event_info_margin_in"
                android:paddingBottom="@dimen/event_info_margin_in">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_query_builder_black_24dp"
                    android:paddingLeft="@dimen/event_info_margin_side"
                    android:paddingRight="@dimen/event_info_margin_side" />
                <TextView
                    android:id="@+id/event_info_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="2015년 8월 17일" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_info_time"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/colorEditTitle"
                android:paddingTop="@dimen/event_info_margin_in"
                android:paddingBottom="@dimen/event_info_margin_out">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_room_black_24dp"
                    android:paddingLeft="@dimen/event_info_margin_side"
                    android:paddingRight="@dimen/event_info_margin_side"/>
                <TextView
                    android:id="@+id/event_info_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="부산시 부산진구 당감3동 한국과학영재학교" />
            </LinearLayout>
        </LinearLayout>
        <android.support.design.widget.FloatingActionButton android:id="@+id/event_info_fab"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="26dp"
            android:src="@drawable/ic_add_black_24dp"
            app:backgroundTint="@color/colorWhite"
            />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/event_info_margin_side"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/event_info_subtitle" />
        <TextView
            android:id="@+id/event_info_see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_info_see_more"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pg_image_size"
        android:orientation="horizontal">
        <com.parse.ParseImageView
            android:id="@+id/event_info_image1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <com.parse.ParseImageView
            android:id="@+id/event_info_image2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <com.parse.ParseImageView
            android:id="@+id/event_info_image3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
        <com.parse.ParseImageView
            android:id="@+id/event_info_image4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>